--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,40 @@
-appdirs==1.4.4
-astroid==2.4.2
 boto3==1.14.20
-botocore==1.17.20
+botocore==1.17.61
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
 decorator==4.4.2
-distlib==0.3.0
 docutils==0.15.2
-filelock==3.0.12
 Flask==1.1.2
 future==0.18.2
 gunicorn==20.0.4
 idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
-importlib-metadata==1.7.0
-importlib-resources==3.0.0
-isort==5.4.2
 itsdangerous==1.1.0
-jedi==0.17.1
 Jinja2==2.11.2
 jmespath==0.10.0
 kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-mccabe==0.6.1
+matplotlib==3.3.1
 moviepy==1.0.3
-networkx==2.4
-numpy==1.19.0
+networkx==2.5
+numpy==1.19.2
 opencv-python==4.3.0.38
-parso==0.7.0
-pika==1.1.0
 Pillow==7.2.0
-pluggy==0.13.1
 proglog==0.1.9
-pylint==2.6.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
-python-jsonrpc-server==0.3.4
-python-language-server==0.33.3
 PyWavelets==1.1.1
 requests==2.24.0
 s3transfer==0.3.3
 scikit-image==0.17.2
-scipy==1.5.1
+scipy==1.5.2
 six==1.15.0
-tifffile==2020.7.17
-toml==0.10.1
-torch==1.5.1
-tqdm==4.48.0
-ujson==1.35
-urllib3==1.25.9
-virtualenv==20.0.23
+tifffile==2020.9.3
+torch==1.6.0
+torchvision==0.7.0
+tqdm==4.49.0
+urllib3==1.25.10
 Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==3.1.0
